# CMake_QT_02_Qt-Standard

./: 版本特性.txt
src/: CMakeLists.txt  main.cpp
